manifests/wordpress/mysql-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-secret
spec:
  containers:
  - image: mysql:5.5
    imagePullPolicy: IfNotPresent
    name: mysql
  restartPolicy: Always
